Fix update user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=service-users
 server.port=8080
 logging.pattern.file=%highlinght(%-5level) %yellow(%date{dd MMM yyyy - HH:mm:ss}) %blue([%thread]) %cyan(%logger{36}) - %green(%msg%n)
-logging.path=logs
-logging.file=console.log
+logging.file.path=logs
+logging.file.name=console.log
