--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,15 @@ ext {
 	set('springCloudVersion', "2020.0.3")
 }
 
+configurations.all {
+    exclude module: 'slf4j-log4j12'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+	implementation 'org.slf4j:slf4j-log4j12:1.7.29'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
