--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@ plugins {
 	id 'org.springframework.boot' version '2.5.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'groovy'
 }
+
+apply plugin: 'groovy'
+apply plugin: 'eclipse'
 
 group = 'com.apirest.springboot.app.bank'
 version = '0.0.1-SNAPSHOT'
@@ -25,9 +29,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.slf4j:slf4j-log4j12:1.7.29'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.spockframework:spock-core:2.0-M2-groovy-3.0'
+	testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
+//	testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
+//	testImplementation 'org.codehaus.groovy:groovy-all:2.4.7'
+
 }
 
 dependencyManagement {
